@@ -63,6 +63,7 @@
 		echo "<TD><A HREF=\"graphs.html?graphid=$graphid_#form\">Change</A> - <A HREF=\"graphs.html?register=delete&graphid=$graphid_\">Delete</A></TD>";
 		echo "</TR>";
 	}
+
 	echo "</TABLE>";
 ?>
 
