@@ -1,8 +1,11 @@
 Changes for 1.0alpha7:
 
+ - name of server included to descriptions of template triggers
+ - link from list of triggers to trigger change form 
+ - changed host form to ask about values from template
+
  - deleted link to comments.html in tr_status.html
  - fixed Enabled/Disabled checkbox in trigger form
-
  - added real links to page About
  - fullscreen mode for form Status of Triggers
  - minor changes in manual.txt
